https://github.com/GroovyLanguageServer/groovy-language-server/pull/85 + Code cosmetics